fix white space media query 414px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,6 +375,27 @@ footer h2 {
         padding-bottom: 200%;
     }
 
+    .collection {
+      margin-top: 30px;
+    }
+
+    #work h3 {
+        width: 300px;
+        margin-left: 20px;
+    }
+
+    #work h4 {
+        width: 350px;
+        margin-left: -10px;
+    }
+
+    .built img {
+        position: absolute;
+        margin-left: -60px;
+        width: 300px;
+        height: 300px;
+    }
+
     #contact-me {
         padding-bottom: 90%;
     }
@@ -391,7 +412,6 @@ footer h2 {
     .copy {
         font-size: 15px;
     }
-
 }
 
 /* iPhone X */
@@ -405,11 +425,6 @@ footer h2 {
         font-size: 18px;
     }
 
-    .built img {
-        width: 165%;
-        margin-left: 81px;
-    }
-
     #contact-me {
         padding-bottom: 100%;
     }
@@ -417,7 +432,6 @@ footer h2 {
     footer h2 {
         font-size: 18px;
     }
-    
 }
 
 
